TECH-1693: Give hazelcast access to required Java packages for best performance (#2070)